--- a/k8s/DestinationRule.yaml
+++ b/k8s/DestinationRule.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: nginx-dr
+  namespace: politicas
 spec:
   host: nginx-stable
   subsets:
