--- a/k8s/DestinationRule.yaml
+++ b/k8s/DestinationRule.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
   name: nginx-dr
-  namespace: politicas
+  namespace: nginx-rollout
 spec:
   host: nginx-stable
   subsets:
