--- a/k8s/virtual_services.yaml
+++ b/k8s/virtual_services.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: nginx-vs
+  namespace: nginx-rollout
 spec:
   hosts:
     - nginx.local
