--- a/k8s/virtual_services.yaml
+++ b/k8s/virtual_services.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: nginx-rollout
 spec:
   hosts:
-    - nginx.local
+    - politicas.kdvops.com
   gateways:
     - nginx-gateway
   http:
