--- a/k8s/nginx-rollout.yaml
+++ b/k8s/nginx-rollout.yaml
@@ -9,6 +9,8 @@ metadata:
   name: nginx-stable
   namespace: nginx-rollout
 spec:
+  externalIPs: 
+    - 10.0.0.160
   selector:
     app: nginx
   ports:
