--- a/k8s/rollouts.yaml
+++ b/k8s/rollouts.yaml
@@ -19,6 +19,7 @@ spec:
           image: nginx:1.29.5
           ports:
             - containerPort: 80
+              protocol: TCP
           resources:
             requests:
               cpu: "100m"
