--- a/k8s/virtual_services.yaml
+++ b/k8s/virtual_services.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
     - politicas.kdvops.com
   gateways:
-    - nginx-gateway
+    - istio-system/kdvops-gateway
   http:
     - name: primary
       route:
