--- a/k8s/virtual_services.yaml
+++ b/k8s/virtual_services.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: nginx-rollout
 spec:
   hosts:
-    - politicas.kdvops.com
+    - politicas2.kdvops.com
   gateways:
     - istio-system/kdvops-gateway
   http:
@@ -19,3 +19,24 @@ spec:
             host: nginx-stable
             subset: canary
           weight: 0
+---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: nginx-vs2
+  namespace: nginx-rollout
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: politicas.kdvops.com
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+spec:
+  hosts:
+  - "politicas.kdvops.com"
+  gateways:
+  - istio-system/kdvops-gateway
+  http:
+  - route:
+    - destination:
+        host: nginx-stable
+        port:
+          number: 80
